wordpress/deployment-clean.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-clean
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-clean
  template:
    metadata:
      labels:
        app: wordpress-clean
    spec:
      containers:
        - name: wordpress
          image: wordpress:7-php8.5-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-clean-data
              mountPath: /var/www/html
            - name: wordpress-old-data
              mountPath: /old
              readOnly: true
      volumes:
        - name: wordpress-clean-data
          persistentVolumeClaim:
            claimName: wordpress-clean-pvc
        - name: wordpress-old-data
          persistentVolumeClaim:
            claimName: wordpress-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-clean
  namespace: wordpress
spec:
  selector:
    app: wordpress-clean
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
