wordpress/ingress-clean.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-clean
  namespace: wordpress
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-clean-http-ingress
  namespace: wordpress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`cngei.it`) || Host(`www.cngei.it`)
      middlewares:
        - name: redirect-https-clean
      services:
        - kind: Service
          name: wordpress-clean
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-clean-ingress
  namespace: wordpress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cngei.it`) || Host(`www.cngei.it`)
      services:
        - kind: Service
          name: wordpress-clean
          port: 80
  tls:
    secretName: wordpress-clean-tls
