wordpress/redirects.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-lupetti
  namespace: wordpress
spec:
  redirectRegex:
    regex: "^(.*)$"
    replacement: "https://cngei.it/giovani/lupetti${1}"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: brancal-ingress
  namespace: wordpress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`brancal.cngei.it`)
      middlewares:
        - name: redirect-lupetti
      services:
        - kind: Service
          name: wordpress-clean
          port: 80
  tls:
    secretName: brancal-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-esploratori
  namespace: wordpress
spec:
  redirectRegex:
    regex: "^(.*)$"
    replacement: "https://cngei.it/giovani/esploratori-ed-esploratrici${1}"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: brancae-ingress
  namespace: wordpress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`brancae.cngei.it`)
      middlewares:
        - name: redirect-esploratori
      services:
        - kind: Service
          name: wordpress-clean
          port: 80
  tls:
    secretName: brancae-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-rover
  namespace: wordpress
spec:
  redirectRegex:
    regex: "^(.*)$"
    replacement: "https://cngei.it/giovani/rover${1}"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: brancar-ingress
  namespace: wordpress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`brancar.cngei.it`)
      middlewares:
        - name: redirect-rover
      services:
        - kind: Service
          name: wordpress-clean
          port: 80
  tls:
    secretName: brancar-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-unisciti
  namespace: wordpress
spec:
  redirectRegex:
    regex: "^(.*)$"
    replacement: "https://cngei.it/unisciti-a-noi${1}"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: international-ingress
  namespace: wordpress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`international.cngei.it`)
      middlewares:
        - name: redirect-unisciti
      services:
        - kind: Service
          name: wordpress-clean
          port: 80
  tls:
    secretName: international-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-adulti
  namespace: wordpress
spec:
  redirectRegex:
    regex: "^(.*)$"
    replacement: "https://cngei.it/adulti${1}"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: risorseadulte-ingress
  namespace: wordpress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`risorseadulte.cngei.it`)
      middlewares:
        - name: redirect-adulti
      services:
        - kind: Service
          name: wordpress-clean
          port: 80
  tls:
    secretName: risorseadulte-tls
